--- a/index.html
+++ b/index.html
@@ -226,6 +226,6 @@
             <span class="toolbar-btn link">Ссылка</span>
         </div> -->
         </main>
-        <script type="module" src="/src/app.ts"></script>
+        <script type="module" src="/src/index.ts"></script>
     </body>
 </html>
