--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <main>
             <ul>
                 <li><b>Instructions:</b></li>
-                <li>Type "\" — to put empty formula</li>
+                <li>(space) + "\" — to put empty formula</li>
                 <li>
                     (space) + numbers + math operator(/,+,-,*, ^) — to put
                     prefilled formula
@@ -190,13 +190,9 @@
                     "Enter" - <i>in text mode</i> - go to math editor mode (when
                     formula focused by keyboard)
                 </li>
-                <li>
-                    "Settings menu & virtual keyboard buttons" - shown for
-                    demonstration of features (may be hidden)
-                </li>
                 <li style="color: red">
-                    "Backspace" - doesn't work to delete formula in Chrome (will
-                    be fixed)
+                    "Backspace" - does not delete a formula in text mode in
+                    Chrome (will be fixed)
                 </li>
             </ul>
             <p>Math Editor</p>
